feat: Update my experience at Softsmart Solutions
I corrected the description of my experience at Softsmart Solutions to account better of the skills i earned

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
               </div>
               <div class="col-md-8">
 
-              <p>Hello, I'm Imran. I can help you build good looking websites and templates and add or make changes to already existing ones. I spend most of my day learning, building, and practicing with HTML, CSS, and JavaScript.</p>
-              <p>I'm also improving my Javascript and learning REACT. I spend my free time watching football and movies.</p>
+              <p>Hello, I'm Imran.</p>
 
               </div>
             </div>
@@ -73,7 +72,7 @@
             <h2>Projects</h2>
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/images/img-04.jpg" class="img-responsive" alt="Media Integrated Website">
+                <img src="./assets/images/img-04.jpg" class="img-responsive" alt="Nile Website Clone">
                 <h3 class="h5">Nile Website Clone</h3>
                 <p>May 2022</p>
               </div>
@@ -107,7 +106,7 @@
               <h3 class="h5 date-title">Student Intern - <a href="http://en.orson.io" title="Create professionnal website">Softsmart Business Solutions</a></h3>
               
 
-              <p>I worked as an intern for a private company named Softsmart Business Solutions. I participated in the development of an Enterprise Resource Planning(ERP) System for a Newpaper Company. I was involved in the Functionality testing, Integration testing and Performance testing. I also learnt the importance of testing end to end models.</p>            </div>
+              <p>I worked as an intern for a private company named Softsmart Business Solutions. I participated in the development of an Enterprise Resource Planning(ERP) System for a Newpaper Company using Agile Methods. I participated in the Release testing to ensure the system meets its requiremant. I was also involved in the Performance test where the system was overloaded using stress test.</p>            </div>
 
           </div>
         </div>
