fix: Remove the link in my work experience

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h2>Work</h2>
             <div class="work-experience">
               <small class="date">August 2021-September 2021</small>
-              <h3 class="h5 date-title">Student Intern - <a href="http://en.orson.io" title="Create professionnal website">Softsmart Business Solutions</a></h3>
+              <h3 class="h5 date-title">Student Intern - Softsmart Business Solutions</h3>
               
 
               <p>I worked as an intern for a private company named Softsmart Business Solutions. I participated in the development of an Enterprise Resource Planning(ERP) System for a Newpaper Company using Agile Methods. I participated in the Release testing to ensure the system meets its requiremant. I was also involved in the Performance test where the system was overloaded using stress test.</p>
