--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2>About me</h2>
             <div class="row">
               <div class="col-md-4">
-                <p><img src="./assets/images/img-01.jpg" class="img-responsive" alt="My Picture"></p>
+                <p><img src="./assets/images/portfolio-img.png" class="img-responsive" alt="My Picture"></p>
               </div>
               <div class="col-md-8">
 
@@ -72,7 +72,7 @@
             <h2>Projects</h2>
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/images/img-04.jpg" class="img-responsive" alt="Nile Website Clone">
+                <img src="./assets/images/project-img-1.jpg" class="img-responsive" alt="Nile Website Clone">
                 <h3 class="h5"><a href="https://shaba-imran.github.io/Nile-website-Clone/" target="_blank">Nile Website Clone</a></h3>
                 <p>May 2022</p>
               </div>
