--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row">
               <div class="col-md-4">
                 <img src="./assets/images/project-img-1.jpg" class="img-responsive" alt="Nile Website Clone">
-                <h3 class="h5"><a href="https://shaba-imran.github.io/Nile-website-Clone/" target="_blank">Nile Website Clone</a></h3>
+                <h3 class="h5"><a href="https://shaba-imran.github.io/Nile-website-Clone/" target="_blank">Nile Vintage Website Clone</a></h3>
                 <p>May 2022</p>
               </div>
               <div class="col-md-4">
