Update my porfolio

--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
         <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/shaba_imran/" title="">
           <i class="fa fa-instagram"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
-          <i class="fa fa-twitter"></i>
-        </a>
         <a class="fa-icon fa-icon-2x" href="http://linkedin.com/in/imran-shaba-4372291a9" title="">
           <i class="fa fa-linkedin"></i>
         </a>
@@ -72,14 +69,14 @@
             <h2>Projects</h2>
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/images/project-img-1.jpg" class="img-responsive" alt="Nile Website Clone">
+                <img src="./assets/images/project-img-1.jpg" class="img-responsive" alt="Nile Vintage Website Clone">
                 <h3 class="h5"><a href="https://shaba-imran.github.io/Nile-website-Clone/" target="_blank">Nile Vintage Website Clone</a></h3>
                 <p>May 2022</p>
               </div>
               <div class="col-md-4">
-                <img src="./assets/images/img-02.jpg" class="img-responsive" alt="Bootstrap Form">
-                <h3 class="h5">Bootstrap Form</h3>
-                <p>November 2021</p>
+                <img src="./assets/images/project-img-2.jpg" class="img-responsive" alt="Nile 2022 Website Clone">
+                <h3 class="h5"><a href="" target="_blank">Nile 2022 Website Clone</a></h3>
+                <p>July 2022</p>
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-09.jpg" class="img-responsive" alt="Nile Time Table Clone">
@@ -90,8 +87,8 @@
 
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/images/img-06.jpg" class="img-responsive" alt="Jamb Application Form">
-                <h3 class="h5">Jamb Application Form</h3>
+                <img src="./assets/images/img-02.jpg" class="img-responsive" alt="Bootstrap Form">
+                <h3 class="h5">Bootstrap Form</h3>
                 <p>November 2021</p>
               </div>
             </div>
@@ -116,7 +113,7 @@
           <div class="card-block">
             <h2>Education</h2>
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-4">
                 <div class="education-experience">
                   <small class="date">2018-Till Date</small>
                   <h3 class="h5 date-title">Student</h3>
@@ -155,9 +152,6 @@
           <div class="card-block">
             <h2>Social Network</h2>
             <div class="row">
-              <div class="col-md-3">
-                <p class="social-buttons"><a href="https://twitter.com/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-twitter"></i></span>@shaba_imran</a></p>
-              </div>
               <div class="col-md-3">
                 <p class="social-buttons"><a href="http://linkedin.com/in/imran-shaba-4372291a9" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Imran Shaba</a></p>
               </div>
@@ -201,9 +195,6 @@
         <p><img src="./assets/images/mashup-icon.svg" alt=""></p>
         
         <p>Imran's Portfolio</p>
-          <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
-            <i class="fa fa-twitter"></i>
-          </a>
           <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/shaba_imran/" title="">
             <i class="fa fa-instagram"></i>
           </a>
