--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/shaba_imran/" title="">
           <i class="fa fa-instagram"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="http://linkedin.com/in/imran-shaba-4372291a9" title="">
+        <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title="">
           <i class="fa fa-linkedin"></i>
         </a>
       </p>
@@ -153,7 +153,7 @@
             <h2>Social Network</h2>
             <div class="row">
               <div class="col-md-3">
-                <p class="social-buttons"><a href="http://linkedin.com/in/imran-shaba-4372291a9" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Imran Shaba</a></p>
+                <p class="social-buttons"><a href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Imran Shaba</a></p>
               </div>
               <div class="col-md-3">
                 <p class="social-buttons"><a href="https://www.instagram.com/shaba_imran/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-instagram"></i></span>@shaba_imran</a></p>
@@ -198,7 +198,7 @@
           <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/shaba_imran/" title="">
             <i class="fa fa-instagram"></i>
           </a>
-          <a class="fa-icon fa-icon-2x" href="http://linkedin.com/in/imran-shaba-4372291a9" title="">
+          <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title="">
             <i class="fa fa-linkedin"></i>
           </a>
         </p>
