Update work experience

--- a/index.html
+++ b/index.html
@@ -99,15 +99,18 @@
           <div class="card-block">
             <h2>Work</h2>
             <div class="work-experience">
-              <small class="date">August 2021-September 2021</small>
-              <h3 class="h5 date-title">Student Intern - Softsmart Business Solutions</h3>
-              
+              <small class="date">August 2021-October 2021</small>
+              <h3 class="h5 date-title">Summer Intern - Softsmart Business Solutions</h3>
 
-              <p>I worked as an intern for a private company named Softsmart Business Solutions. I participated in the development of an Enterprise Resource Planning(ERP) System for a Newpaper Company using Agile Methods. I participated in the Release testing to ensure the system meets its requiremant. I was also involved in the Performance test where the system was overloaded using stress test.</p>
+              <p></p>
+
+              <small class="date">July 2022-September 2022</small>
+              <h3 class="h5 date-title">Summer Intern - Softsmart Business Solutions</h3>
+
+              <p></p>
             </div>
           </div>
         </div>
-        
 
         <div class="card">
           <div class="card-block">
@@ -115,8 +118,8 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="education-experience">
-                  <small class="date">2018-Till Date</small>
-                  <h3 class="h5 date-title">Student</h3>
+                  <small class="date">2018-2022</small>
+                  <h3 class="h5 date-title">Bachelor of Science - BS, Computer Science</h3>
                   <p>Nile University of Nigeria</p>
                 </div>
               </div>
@@ -131,11 +134,6 @@
               <div class="col-md-4">
                 <div class="language-experience">
                   <h3 class="h5">English  <small>Fluent</small></h3>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="language-experience">
-                  <h3 class="h5">Nupe  <small>Native</small></h3>
                 </div>
               </div>
               <div class="col-md-4">
