--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
             </div>
           </div>
         </div>
+
+        <div class="card">
+          <div class="card-block">
+            <h2>Skills</h2>
+            <img src="./assets/images/skills/javascript.svg">
+            <img src="./assets/images/skills/css.svg">
+            <img src="./assets/images/skills/html.svg">
+            <img src="./assets/images/skills/react.svg">
+            <img src="./assets/images/skills/git.svg">
+          </div>
+        </div>
         
         <div class="card">
           <div class="card-block">
