Add new project

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/project-img-2.jpg" class="img-responsive" alt="Nile 2022 Website Clone">
-                <h3 class="h5"><a href="" target="_blank">Nile 2022 Website Clone</a></h3>
-                <p>July 2022</p>
+                <h3 class="h5"><a href="https://shaba-imran.github.io/Nile-Official-Website-Clone/" target="_blank">Nile 2022 Website Clone</a></h3>
+                <p>October 2022</p>
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-09.jpg" class="img-responsive" alt="Nile Time Table Clone">
