--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
   <header class="white-text-container section-container">
     <div class="text-center">
       <h1>I am Imran Usman Shaba</h1>
-      <p>Front-end Developer</p>      <p>
-        <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/shaba_imran/" title="">
-          <i class="fa fa-instagram"></i>
-        </a>
+      <p>Front-end Developer</p>
+      <p>
         <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title="">
           <i class="fa fa-linkedin"></i>
         </a>
@@ -155,9 +153,6 @@
               <div class="col-md-3">
                 <p class="social-buttons"><a href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Imran Shaba</a></p>
               </div>
-              <div class="col-md-3">
-                <p class="social-buttons"><a href="https://www.instagram.com/shaba_imran/" title=""><span class="social-round-icon fa-icon"><i class="fa fa-instagram"></i></span>@shaba_imran</a></p>
-              </div>
             </div>
           </div>
         </div>
@@ -195,9 +190,6 @@
         <p><img src="./assets/images/mashup-icon.svg" alt=""></p>
         
         <p>Imran's Portfolio</p>
-          <a class="fa-icon fa-icon-2x" href="https://www.instagram.com/shaba_imran/" title="">
-            <i class="fa fa-instagram"></i>
-          </a>
           <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title="">
             <i class="fa fa-linkedin"></i>
           </a>
