Update my portfolio

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/4d83bb1c64.js" crossorigin="anonymous"></script>
+
   <title>My Portfolio</title>  
 
 <link href="./main.d8e0d294.css" rel="stylesheet"></head>
@@ -30,6 +33,9 @@
       <h1>I am Imran Usman Shaba</h1>
       <p>Front-end Developer</p>
       <p>
+        <a class="fa-icon fa-icon-2x" href="mailto:imranusmanshaba@gmail.com">
+          <i class="fa-solid fa-envelope"></i>
+        </a>
         <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title="">
           <i class="fa fa-linkedin"></i>
         </a>
@@ -48,7 +54,7 @@
                 <p><img src="./assets/images/portfolio-img.png" class="img-responsive" alt="My Picture"></p>
               </div>
               <div class="col-md-8">
-              <p>Hello, I'm Imran.</p>
+              <p>I’m a Front-end Developer based in Abuja, Nigeria. I am dedicated to creating responsive and user friendly websites for good Search Engine Optimization.</p>
               </div>
             </div>
           </div>
@@ -125,6 +131,10 @@
             <img src="./assets/images/skills/html.svg">
             <img src="./assets/images/skills/react.svg">
             <img src="./assets/images/skills/git.svg">
+            <img src="./assets/images/skills/node.svg">
+            <img src="./assets/images/skills/express.svg">
+            <img src="./assets/images/skills/postgresql.svg">
+            <img src="./assets/images/skills/npm.svg">
           </div>
         </div>
         
@@ -150,6 +160,9 @@
           <div class="card-block">
             <h2>Social Network</h2>
             <div class="row">
+              <div class="col-md-3">
+                <p class="social-buttons"><a href="mailto:imranusmanshaba@gmail.com" title=""><span class="social-round-icon fa-icon"><i class="fa fa-envelope"></i></span>Imran Usman Shaba</a></p>
+              </div>
               <div class="col-md-3">
                 <p class="social-buttons"><a href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Imran Shaba</a></p>
               </div>
@@ -190,6 +203,9 @@
         <p><img src="./assets/images/mashup-icon.svg" alt=""></p>
         
         <p>Imran's Portfolio</p>
+          <a class="fa-icon fa-icon-2x" href="mailto:imranusmanshaba@gmail.com">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
           <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title="">
             <i class="fa fa-linkedin"></i>
           </a>
