Update my portfolio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <!-- <link href="./assets/favicon.ico" rel="icon"> -->
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/4d83bb1c64.js" crossorigin="anonymous"></script>
@@ -126,15 +126,15 @@
         <div class="card">
           <div class="card-block">
             <h2>Skills</h2>
-            <img src="./assets/images/skills/javascript.svg">
-            <img src="./assets/images/skills/css.svg">
-            <img src="./assets/images/skills/html.svg">
-            <img src="./assets/images/skills/react.svg">
-            <img src="./assets/images/skills/git.svg">
-            <img src="./assets/images/skills/node.svg">
-            <img src="./assets/images/skills/express.svg">
-            <img src="./assets/images/skills/postgresql.svg">
-            <img src="./assets/images/skills/npm.svg">
+            <img class="image-spacing" src="./assets/images/skills/javascript.svg">
+            <img class="image-spacing" src="./assets/images/skills/css.svg">
+            <img class="image-spacing" src="./assets/images/skills/html.svg">
+            <img class="image-spacing" src="./assets/images/skills/react.svg">
+            <img class="image-spacing" src="./assets/images/skills/git.svg">
+            <img class="image-spacing" src="./assets/images/skills/node.svg">
+            <img class="image-spacing" src="./assets/images/skills/express.svg">
+            <img class="image-spacing" src="./assets/images/skills/postgresql.svg">
+            <img class="image-spacing" src="./assets/images/skills/npm.svg">
           </div>
         </div>
         
