Update my portfolio

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p><img src="./assets/images/portfolio-img.png" class="img-responsive" alt="My Picture"></p>
               </div>
               <div class="col-md-8">
-              <p>I’m a Front-end Developer based in Abuja, Nigeria. I am dedicated to creating responsive and user friendly websites for good Search Engine Optimization.</p>
+              <p>As a skilled Frontend Developer, I have a passion for creating attractive websites with intuitive web experiences. Having worked with HTML, CSS, JavaScript, and frameworks like React, I am able to create responsive, high-performing websites that are also search engine optimized. I provide engineering solutions to issues and a communicator who is constantly searching for ways to enhance user experience and go above and beyond customer expectations.</p>
               </div>
             </div>
           </div>
