--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="card">
               <div class="card-block">
                 <h2>Contact</h2>
-                <form action="" class="reveal-content" id="myForm">
+                <form action="" class="reveal-content">
                   <div class="form-group">
                     <input type="email" class="form-control" id="email" placeholder="Email">
                   </div>
@@ -240,6 +240,5 @@
   </script> -->
 
     <script type="text/javascript" src="./main.bc58148c.js"></script>
-    <script type="text/javascript" src="formdata.js"></script>
   </body>
 </html>
