--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
 
 
-            <div class="card">
+            <!-- <div class="card">
               <div class="card-block">
                 <h2>Contact</h2>
                 <form action="" class="reveal-content">
@@ -195,7 +195,7 @@
                   </div> 
                 </form>
               </div>
-            </div>
+            </div> -->
            
          </div>
        </div>
