--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   
                   <div class="col-md-4">
                     <img src="./assets/images/project-img-3.jpg" class="img-responsive" alt="face Recognition">
-                    <h3 class="h5"><a href="#" target="_blank">face Recognition</a></h3>
+                    <h3 class="h5"><a href="https://shaba-imran.github.io/face-Recognition/" target="_blank">face Recognition</a></h3>
                     <p>January 2023</p>
                   </div>
                   
