--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p><img src="./assets/images/portfolio-img.png" class="img-responsive" alt="My Picture"></p>
                   </div>
                   <div class="col-md-8">
-                  <p>As a skilled Frontend Developer, I have a passion for creating attractive websites with intuitive web experiences. Having worked with HTML, CSS, JavaScript, and frameworks like React, I am able to create responsive, high-performing websites that are also search engine optimized. I provide engineering solutions to issues and a communicator who is constantly searching for ways to enhance user experience and go above and beyond customer expectations.</p>
+                  <p>As a skilled Frontend Developer, I have a passion for creating attractive websites with intuitive web experiences. Having worked with HTML, CSS, JavaScript, and frameworks like React, I am able to create responsive, high-performing websites that are also search engine optimized. I provide software solutions, and also a communicator constantly searching for ways to enhance user experience and go above and beyond customer expectations.</p>
                   </div>
                 </div>
               </div>
@@ -78,15 +78,15 @@
                   
                   <div class="col-md-4">
                     <img src="./assets/images/project-img-4.jpg" class="img-responsive" alt="The Matrix">
-                    <h3 class="h5"><a href="#" target="_blank">The Matrix</a></h3>
+                    <h3 class="h5"><a href="https://shaba-imran.github.io/The-Matrix/" target="_blank">The Matrix</a></h3>
                     <p>February 2023</p>
                   </div>
                 </div>
 
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="./assets/images/img-09.jpg" class="img-responsive" alt="Nile Time Table Clone">
-                    <h3 class="h5">Nile Time Table Clone</h3>
+                    <img src="./assets/images/img-09.jpg" class="img-responsive" alt="Time Table Clone">
+                    <h3 class="h5">Time Table Clone</h3>
                     <p>November 2021</p>
                   </div>
 
