--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                 <h2>Social Network</h2>
                 <div class="row">
                   <div class="col-md-3">
-                    <p class="social-buttons"><a href="mailto:imranusmanshaba@gmail.com" title=""><span class="social-round-icon fa-icon"><i class="fa fa-envelope"></i></span>Imran Usman Shaba</a></p>
+                    <p class="social-buttons"><a href="mailto:imranusmanshaba@gmail.com" title=""><span class="social-round-icon fa-icon"><i class="fa fa-envelope"></i></span>Gmail</a></p>
                   </div>
                   <div class="col-md-3">
-                    <p class="social-buttons"><a href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>Imran Shaba</a></p>
+                    <p class="social-buttons"><a href="https://www.linkedin.com/in/imran-usman-shaba-4372291a9?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnH98boaBQxSPVzBepithLg%3D%3D" title=""><span class="social-round-icon fa-icon"><i class="fa fa-linkedin"></i></span>LinkedIn</a></p>
                   </div>
                 </div>
               </div>
