--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <h1>I am Imran Usman Shaba</h1>
           <p>Front-end Developer</p>
           <p>
+            <a class="fa-icon fa-icon-2x" href="https://instagram.com/shaba_imran2023?igshid=NTc4MTIwNjQ2YQ==">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
             <a class="fa-icon fa-icon-2x" href="mailto:imranusmanshaba@gmail.com">
               <i class="fa-solid fa-envelope"></i>
             </a>
@@ -167,6 +170,9 @@
                 <h2>Social Network</h2>
                 <div class="row">
                   <div class="col-md-3">
+                    <p class="social-buttons"><a href="https://instagram.com/shaba_imran2023?igshid=NTc4MTIwNjQ2YQ==" title=""><span class="social-round-icon fa-icon"><i class="fa-brands fa-instagram"></i></span>Instagram</a></p>
+                  </div>
+                  <div class="col-md-3">
                     <p class="social-buttons"><a href="mailto:imranusmanshaba@gmail.com" title=""><span class="social-round-icon fa-icon"><i class="fa fa-envelope"></i></span>Gmail</a></p>
                   </div>
                   <div class="col-md-3">
@@ -209,6 +215,9 @@
             <p><img src="./assets/images/mashup-icon.svg" alt=""></p>
             
             <p>Imran's Portfolio</p>
+              <a class="fa-icon fa-icon-2x" href="https://instagram.com/shaba_imran2023?igshid=NTc4MTIwNjQ2YQ==">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
               <a class="fa-icon fa-icon-2x" href="mailto:imranusmanshaba@gmail.com">
                 <i class="fa-solid fa-envelope"></i>
               </a>
