Update work experience

--- a/index.html
+++ b/index.html
@@ -106,13 +106,17 @@
               <div class="card-block">
                 <h2>Work</h2>
                 <div class="work-experience">
-                  <small class="date">August 2021-October 2021</small>
-                  <h3 class="h5 date-title">Summer Intern - Softsmart Business Solutions</h3>
-                  <p></p>
+                  <small class="date">December 2022-Present</small>
+                  <h3 class="h5 date-title">Frontend Developer - Upwork</h3>
+                  <p>Freelance</p>
 
                   <small class="date">July 2022-September 2022</small>
                   <h3 class="h5 date-title">Summer Intern - Softsmart Business Solutions</h3>
-                  <p></p>
+                  <p>Internship</p>
+                  
+                  <small class="date">August 2021-October 2021</small>
+                  <h3 class="h5 date-title">Summer Intern - Softsmart Business Solutions</h3>
+                  <p>Internship</p>
                 </div>
               </div>
             </div>
