--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>About me</h2>
                 <div class="row">
                   <div class="col-md-4">
-                    <p><img src="./assets/images/portfolio-img.png" class="img-responsive" alt="My Picture"></p>
+                    <p><img src="./assets/images/portfolio-img.jpg" class="img-responsive" alt="My Picture"></p>
                   </div>
                   <div class="col-md-8">
                   <p>As a skilled Frontend Developer, I have a passion for creating attractive websites with intuitive web experiences. Having worked with HTML, CSS, JavaScript, and frameworks like React, I am able to create responsive, high-performing websites that are also search engine optimized. I provide software solutions, and also a communicator constantly searching for ways to enhance user experience and go above and beyond customer expectations.</p>
@@ -88,15 +88,20 @@
 
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="./assets/images/img-09.jpg" class="img-responsive" alt="Time Table Clone">
-                    <h3 class="h5">Time Table Clone</h3>
-                    <p>November 2021</p>
+                    <img src="./assets/images/img-05.jpg" class="img-responsive" alt="EateriesToGo">
+                    <h3 class="h5">EateriesToGo</h3>
+                    <p>2023</p>
                   </div>
 
                   <div class="col-md-4">
                     <img src="./assets/images/project-img-1.jpg" class="img-responsive" alt="Nile Vintage Website Clone">
                     <h3 class="h5"><a href="https://shaba-imran.github.io/Nile-website-Clone/" target="_blank">Nile Vintage Website Clone</a></h3>
                     <p>May 2022</p>
+                  </div>
+                  <div class="col-md-4">
+                    <img src="./assets/images/project-img-6.jpg" class="img-responsive" alt="Nile Vintage Website Clone">
+                    <h3 class="h5">focusTime</h3>
+                    <p>2023</p>
                   </div>
                 </div>
               </div>
