--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
           <h1>I am Imran Usman Shaba</h1>
           <p>Front-end Developer</p>
           <p>
-            <a class="fa-icon fa-icon-2x" href="https://instagram.com/shaba_imran2023?igshid=NTc4MTIwNjQ2YQ==">
+            <a class="fa-icon fa-icon-2x" href="https://twitter.com/shaba_imran">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a class="fa-icon fa-icon-2x" href="https://instagram.com/shaba_imran?igshid=NTc4MTIwNjQ2YQ==">
               <i class="fa-brands fa-instagram"></i>
             </a>
             <a class="fa-icon fa-icon-2x" href="mailto:imranusmanshaba@gmail.com">
@@ -179,7 +182,10 @@
                 <h2>Social Network</h2>
                 <div class="row">
                   <div class="col-md-3">
-                    <p class="social-buttons"><a href="https://instagram.com/shaba_imran2023?igshid=NTc4MTIwNjQ2YQ==" title=""><span class="social-round-icon fa-icon"><i class="fa-brands fa-instagram"></i></span>Instagram</a></p>
+                    <p class="social-buttons"><a href="https://twitter.com/shaba_imran" title=""><span class="social-round-icon fa-icon"><i class="fa-brands fa-twitter"></i></span>Twitter</a></p>
+                  </div>
+                  <div class="col-md-3">
+                    <p class="social-buttons"><a href="https://instagram.com/shaba_imran?igshid=NTc4MTIwNjQ2YQ==" title=""><span class="social-round-icon fa-icon"><i class="fa-brands fa-instagram"></i></span>Instagram</a></p>
                   </div>
                   <div class="col-md-3">
                     <p class="social-buttons"><a href="mailto:imranusmanshaba@gmail.com" title=""><span class="social-round-icon fa-icon"><i class="fa fa-envelope"></i></span>Gmail</a></p>
@@ -224,7 +230,10 @@
             <p><img src="./assets/images/mashup-icon.svg" alt=""></p>
             
             <p>Imran's Portfolio</p>
-              <a class="fa-icon fa-icon-2x" href="https://instagram.com/shaba_imran2023?igshid=NTc4MTIwNjQ2YQ==">
+              <a class="fa-icon fa-icon-2x" href="https://twitter.com/shaba_imran">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a class="fa-icon fa-icon-2x" href="https://instagram.com/shaba_imran?igshid=NTc4MTIwNjQ2YQ==">
                 <i class="fa-brands fa-instagram"></i>
               </a>
               <a class="fa-icon fa-icon-2x" href="mailto:imranusmanshaba@gmail.com">
