--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="content-wrapper">
       <header class="white-text-container section-container">
         <div class="text-center">
-          <h1>I am Imran Usman Shaba</h1>
+          <h1>Imran Usman Shaba</h1>
           <p>Front-end Developer</p>
           <p>
             <a class="fa-icon fa-icon-2x" href="https://twitter.com/shaba_imran">
