--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <header class="white-text-container section-container">
         <div class="text-center">
           <h1>Imran Usman Shaba</h1>
-          <p>Front-end Developer</p>
+          <p>Software Developer</p>
           <p>
             <a class="fa-icon fa-icon-2x" href="https://twitter.com/shaba_imran">
               <i class="fa-brands fa-twitter"></i>
