--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <h2>Work</h2>
                 <div class="work-experience">
                   <small class="date">December 2022-Present</small>
-                  <h3 class="h5 date-title">Frontend Developer - Upwork</h3>
+                  <h3 class="h5 date-title">Web Developer - Upwork</h3>
                   <p>Freelance</p>
 
                   <small class="date">July 2022-September 2022</small>
