--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p><img src="./assets/images/portfolio-img.jpg" class="img-responsive" alt="My Picture"></p>
                   </div>
                   <div class="col-md-8">
-                  <p>As a skilled Frontend Developer, I have a passion for creating attractive websites with intuitive web experiences. Having worked with HTML, CSS, JavaScript, and frameworks like React, I am able to create responsive, high-performing websites that are also search engine optimized. I provide software solutions, and also a communicator constantly searching for ways to enhance user experience and go above and beyond customer expectations.</p>
+                  <p>As a skilled Web Developer, I have a passion for creating attractive websites with intuitive web experiences. Having worked with HTML, CSS, JavaScript, and frameworks like React, I am able to create responsive, high-performing websites that are also search engine optimized. I provide software solutions, and also a communicator constantly searching for ways to enhance user experience and go above and beyond customer expectations.</p>
                   </div>
                 </div>
               </div>
