--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                   </div>
                   <div class="col-md-4">
                     <div class="language-experience">
+                      <h3 class="h5">Nupe  <small>Native</small></h3>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="language-experience">
                       <h3 class="h5">Hausa  <small>Fluent</small></h3>
                     </div>
                   </div>
