--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             
             <div class="card">
               <div class="card-block">
-                <h2>Language</h2>
+                <h2>Languages</h2>
                 <div class="row">
                   <div class="col-md-4">
                     <div class="language-experience">
